# rokujo-lexis

./: .ackrc  pyproject.toml
.github/workflows/: ci.yml
src/rokujo/analyzer/: base.py
src/rokujo/analyzer/strategies/: noun.py
src/rokujo/lexis/: cli.py  engine.py
src/rokujo/lexis/formatters/: base.py  impl.py
src/rokujo/lexis/strategies/: noun.py
tests/: conftest.py
tests/rokujo/analyzer/: test_base.py  test_engine.py
tests/rokujo/analyzer/strategies/: test_noun.py
tests/rokujo/lexis/: test_base.py  test_engine.py
tests/rokujo/lexis/strategies/: test_noun.py
