[project]
name = "rokujo-analyzer-en"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "pip>=26.0.1",
    "pydantic>=2.12.5",
    "spacy==3.8.13",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]
[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
